css/screen.css
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

/* Global Reset */

* {
  margin: 0;
  padding: 0;
}

html, body {
  height: 100%;
}

body {
  background-color: #FFF;
  font: 13.34px helvetica, arial, clean, sans-serif;
  *font-size: small;
  text-align: center;
}

h1, h2, h3, h4, h5, h6 {
  font-size: 100%;
  margin: 1em 0;
}

h1 {
  margin-bottom: 1em;
}

p {
  margin: 1em 0;
}

a {
  color: darkblue;
}

a:hover {
  color: black;
}

a:visited {
  color: darkorange;
}

table {
  font-size: inherit;
  font: 100%;
}

/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/

#home {
}

ul.posts {
  list-style-type: none;
  margin-bottom: 2em;
}

  ul.posts li {
    line-height: 1.75em;
  }

  ul.posts span {
    color: black;
    font-family: Monaco, "Courier New", monospace;
    font-size: 80%;
  }

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {
  font-size: 110%;
  text-align: justify;
  width: 42em;
  margin: 3em auto 2em auto;
  line-height: 1.5em;
}

.title {
  color: darkblue;
  font-weight: bold;
  margin-bottom: 2em;
}

  .site .title a {
    color: darkblue;
    text-decoration: none;
  }

  .site .title a:hover {
    text-decoration: underline;
  }

  .site .title a.extra {
    color: darkorange;
    text-decoration: none;
    margin-left: 1em;
  }

  .site .title a.extra:hover {
    text-decoration: underline;
  }

  .site .meta {
    color: black;
  }

  .site .footer {
    font-size: 80%;
    color: #666;
    border-top: 4px solid #eee;
    margin-top: 2em;
    overflow: hidden;
  }

    .site .footer .contact {
      float: left;
      margin-right: 3em;
    }

      .site .footer .contact a {
        color: #8085C1;
      }

    .site .footer .rss {
      margin-top: 1.1em;
      margin-right: -.2em;
      float: right;
    }

      .site .footer .rss img {
        border: 0;
      }

/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/

#post {

}

  /* standard */

  #post pre {
    border: 1px solid #ddd;
    background-color: #333;
    padding: 0 .4em;
  }

  #post ul,
  #post ol {
    margin-left: 1.35em;
    margin: 1em;
  }

  #post code {
    border: 1px solid #ddd;
    background-color: #333;
    font-size: 85%;
    padding: 0 .2em;
  }

    #post pre code {
      border: none;
    }

  /* terminal */

  #post pre.terminal {
    border: 1px solid black;
    background-color: #333;
    color: white;
  }

  #post pre.terminal code {
    background-color: #333;
  }

#related {
  margin-top: 2em;
}

  #related h2 {
    margin-bottom: 1em;
  }

